[tool.poetry]
name = "tutorial"
version = "0.1.0"
description = ""
authors = ["Malvere <gatling1404@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.22.0"
asyncio = "^3.4.3"
requests = "^2.30.0"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
aiohttp = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
